# zkvm-prover-gpu-sdk

./: .gitignore  README.md  release.sh
examples/go/: .gitignore  Makefile  download.sh  go.mod  main.go  zkvm-prover-client
examples/go/assets/batch/: openvm.toml
examples/go/assets/bundle/: openvm.toml
examples/go/assets/chunk/: openvm.toml
examples/go/lib/: zkvm.h
examples/go/testdata/: 10319973.json
examples/go/testdata/batch/: batch.json
examples/go/testdata/bundle/: bundle.json
examples/go/testdata/chunk/: 10319966.json  10319967.json  10319968.json  10319969.json  10319970.json  10319971.json  10319972.json  10319974.json  10320016.json
interface/: zkvm.h
prover/: Cargo.toml
prover/src/: lib.rs  prover.rs  utils.rs  zk_circuits_handler.rs
prover/src/prover/: euclid.rs  euclidV2.rs  euclid_v2.rs
